@@ -1,6 +1,7 @@
 == HEAD
 
 Features:
+* Don't allow colons in header names (jeremy)
 * Can assign arrays of Message-IDs to References and In-Reply-To (jeremy)
 * Setting the html_ or text_part sets a default text/html or text/plain content type (jeremy)
 * Setting the html_ or text_part to nil removes it (jeremy)
